--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sicredi",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Uma biblioteca JavaScript para interagir com o WebService EcommResource, para gerenciamento de boletos, do banco Sicredi",
   "main": "lib/index.js",
   "scripts": {
@@ -47,23 +47,24 @@
   },
   "homepage": "https://github.com/murilosandiego/node-sicredi#readme",
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/node": "7.2.2",
-    "@babel/preset-env": "7.3.1",
-    "@babel/register": "7.0.0",
-    "chai": "4.2.0",
-    "chai-as-promised": "7.1.1",
-    "chai-subset": "1.6.0",
-    "coveralls": "3.0.2",
-    "husky": "1.3.1",
-    "mocha": "5.2.0",
-    "nock": "10.0.6",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-subset": "^1.6.0",
+    "coveralls": "^3.0.11",
+    "husky": "^1.3.1",
+    "mocha": "^7.1.1",
+    "nock": "^10.0.6",
     "nyc": "^14.1.1",
-    "rimraf": "2.6.3",
-    "sinon": "7.2.3",
-    "sinon-chai": "3.3.0",
-    "standard": "12.0.1"
+    "rimraf": "^2.7.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.5.0",
+    "standard": "^12.0.1"
   },
   "standard": {
     "ignore": [
@@ -83,7 +84,7 @@
     }
   },
   "dependencies": {
-    "request": "2.88.0",
-    "request-promise-native": "1.0.7"
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8"
   }
 }
